Training Org Avenga/src/objects/Developer__c.object
<CustomObject>
    <description>The person who gets the job done</description>
    <fields>
        <fullName>Is_Billable__c</fullName>
        <description>if Dev has at least one billable project assigned - green image, else - yellow</description>
        <formula>IF(Total_Billable_Projects__c &gt;0,IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;,20,20),IMAGE(&quot;/resource/Yellow&quot;,&quot;Yellow&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Billable?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRaiseDate__c</fullName>
        <label>LastRaiseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date__c</fullName>
        <description>Displays the date of the last synchronization</description>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Projects__c</fullName>
        <description>Total number of active and billable projects</description>
        <label>Total Billable Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Developer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LastRaiseDate__c</columns>
        <columns>Salary__c</columns>
        <columns>Total_Billable_Projects__c</columns>
        <columns>Is_Billable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>